--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "fabric": "^2.3.3",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
