--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "json-display": "^1.2.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.2",
+    "vue-json-tree-view": "^2.1.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -46,6 +50,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "1.14.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
